# channel

./: .bamboo.yml  .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
bamboo-common/src/: ci_files.rs  lib.rs
bamboo-dsl/: Cargo.toml  README.md
bamboo-dsl/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: database.rs  events.rs  lib.rs  websocket.rs
migrations/: 20221211034928_update_job_logs_to_add_pipes_to_them.sql  20221214232547_add_config_to_repo_table.sql
plugins/: base_logger.lua
plugins/curator/: Cargo.toml  meta.json
plugins/curator/src/: lib.rs
runner/: Cargo.toml  Config.example.toml
runner/src/: command.rs  config.rs  container.rs  io.rs  lib.rs  main.rs
server/: Cargo.toml  Config.example.toml
server/src/: config.rs  errors.rs  lib.rs  main.rs  messages.rs  models.rs  plugins.rs  socket.rs
server/src/api/: github.rs  jobs.rs  mod.rs  oauth.rs
spire/: Cargo.toml
spire/src/: config.rs  database.rs  github.rs  lib.rs  main.rs  messages.rs  models.rs  plugins.rs  socket.rs
spire/src/api/: github.rs  jobs.rs
