[package]
name = "spiar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
] }
git2 = "0.15.0"
anyhow = "1.0.66"
serde_yaml = "0.9.14"
serde_json = { version = "1.0.81", features = ["raw_value"] }
serde = { version = "1.0.147", features = ["derive"] }
capnp = "0.15.1"
actix-web = { version = "4.2.1" }
futures = { version = "0.3.25", default-features = false, features = [
    "std",
    "async-await",
] }
actix-http = "3.2.2"
actix-web-actors = "4.1.0"
actix = "0.13.0"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "migrate",
    "macros",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "json",
    "decimal",
] }
chrono = { version = "0.4.19", features = ["serde"] }
ring = "0.16.20"
base64 = "0.13.1"
hex = "0.4.3"
toml = "0.5.9"
common = { path = "../common" }
async-trait = "*"
jsonwebtoken = "8.2.0"
openssl = "0.10.43"
reqwest = { version = "0.11.13", features = ["rustls-tls-native-roots"] }
actix-files = "0.6.2"
libloading = "0.7.4"
walkdir = "2.3.2"
lazy_static = "1.4.0"
once_cell = "1.16.0"
